created login route to handle authentication in the backend used jsonwebtok to check authentication need to implement functions that handle displaying user data

--- a/mern-egg/backend/.env
+++ b/mern-egg/backend/.env
@@ -1,1 +1,3 @@
 ATLAS_URI=mongodb+srv://tyler:youn@cluster0.5rr5d.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
+ACCESS_TOKEN_SECRET=token123
